launcher/src-tauri/build_error.log
cargo :     Checking muvoid-launcher v1.0.0 (C:\Users\matia\OneDrive\Documentos\GitHub\MuVoidClient\launcher\src-tauri)
En línea: 1 Carácter: 49
+ ... v:CARGO_TARGET_DIR = "C:\tmp\muvoid_target"; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking mu...cher\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: the trait bound `VersionManifest: serde::Serialize` is not satisfied
    --> src\http_updater.rs:386:54
     |
 386 |     let manifest_json = serde_json::to_string_pretty(&manifest).map_err(|e| e.to_string())?;
     |                         ---------------------------- ^^^^^^^^^ unsatisfied trait bound
     |                         |
     |                         required by a bound introduced by this call
     |
help: the trait `Serialize` is not implemented for `VersionManifest`
    --> src\http_updater.rs:54:1
     |
  54 | struct VersionManifest {
     | ^^^^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `VersionManifest` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 363 others
note: required by a bound in `to_string_pretty`
    --> C:\Users\matia\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_json-1.0.149\src\ser.rs:2266:17
     |
2264 | pub fn to_string_pretty<T>(value: &T) -> Result<String>
     |        ---------------- required by a bound in this function
2265 | where
2266 |     T: ?Sized + Serialize,
     |                 ^^^^^^^^^ required by this bound in `to_string_pretty`
     = note: the full name for the type has been written to 
'C:\tmp\muvoid_target\debug\deps\muvoid_launcher_lib-5cf8960f55b06074.long-type-16459606522507910686.txt'
     = note: consider using `--verbose` to print the full type name to the console

For more information about this error, try `rustc --explain E0277`.
error: could not compile `muvoid-launcher` (lib) due to 1 previous error
